@@ -3,12 +3,80 @@ require_once(dirname(__FILE__) . '/simpletest/autorun.php');
 require_once(dirname(__FILE__) . '/simpletest/web_tester.php');
 include_once(dirname(__FILE__) . '/config.php');
 
+// Requires: settings, apsearch, alsearch, to insert test airport, airline data
+
+//
+// MULTISEARCH
+//
+
+// Search for string found in both airport and airline name
+class MultiSearchSharedLongStringTest extends WebTestCase {
+  function test() {
+    global $webroot, $airport, $airline, $qs_string;
+
+    $params = array("qs" => $qs_string);
+    $msg = $this->post($webroot . "php/autocomplete.php", $params);
+    $this->assertText($airport["city"] . "-");
+    $this->assertText("(" . $airport["iata"] . ")");
+    $this->assertText("(" . $airline["iata"] . ")");
+    $this->assertText($airline["name"]);
+  }
+}
+
+// Search for string found only in airport name
+class MultiSearchAirportOnlyLongStringTest extends WebTestCase {
+  function test() {
+    global $webroot, $airport;
+
+    $params = array("qs" => $airport["name"]);
+    $msg = $this->post($webroot . "php/autocomplete.php", $params);
+    $this->assertText($airport["city"] . "-");
+    $this->assertText("(" . $airport["iata"] . ")");
+  }
+}
+
+// Search for string found in only airline name
+class MultiSearchAirlineOnlyLongStringTest extends WebTestCase {
+  function test() {
+    global $webroot, $airline;
+
+    $params = array("qs" => $airline["name"]);
+    $msg = $this->post($webroot . "php/autocomplete.php", $params);
+    $this->assertText("(" . $airline["iata"] . ")");
+    $this->assertText($airline["name"]);
+  }
+}
+
+// Search for airport by IATA
+class MultiSearchAirportIATATest extends WebTestCase {
+  function test() {
+    global $webroot, $airport;
+
+    $params = array("qs" => $airport["iata"]);
+    $msg = $this->post($webroot . "php/autocomplete.php", $params);
+    $this->assertText($airport["city"] . "-");
+    $this->assertText("(" . $airport["iata"] . ")");
+  }
+}
+
+// Search for airline by IATA
+class MultiSearchAirlineIATATest extends WebTestCase {
+  function test() {
+    global $webroot, $airline;
+
+    $params = array("qs" => $airline["iata"]);
+    $msg = $this->post($webroot . "php/autocomplete.php", $params);
+    $this->assertText("(" . $airline["iata"] . ")");
+    $this->assertText($airline["name"]);
+  }
+}
+
 //
 // AIRPORTS
 //
 
-// Quick airport search by city name
-class QuickAirportCityCompleteTest extends WebTestCase {
+// Single airport search by city name
+class SingleAirportCityCompleteTest extends WebTestCase {
   function test() {
     global $webroot, $airport;
 
@@ -21,8 +89,8 @@ class QuickAirportCityCompleteTest extends WebTestCase {
   }
 }
 
-// Quick airport search by IATA code
-class QuickAirportIATACompleteTest extends WebTestCase {
+// Single airport search by IATA code
+class SingleAirportIATACompleteTest extends WebTestCase {
   function test() {
     global $webroot, $airport;
 
@@ -35,8 +103,8 @@ class QuickAirportIATACompleteTest extends WebTestCase {
   }
 }
 
-// Quick airport search by ICAO code
-class QuickAirportICAOCompleteTest extends WebTestCase {
+// Single airport search by ICAO code
+class SingleAirportICAOCompleteTest extends WebTestCase {
   function test() {
     global $webroot, $airport;
 
@@ -53,8 +121,8 @@ class QuickAirportICAOCompleteTest extends WebTestCase {
 // AIRLINES
 //
 
-// Quick airline search by name
-class QuickAirlineNameCompleteTest extends WebTestCase {
+// Single airline search by name
+class SingleAirlineNameCompleteTest extends WebTestCase {
   function test() {
     global $webroot, $airline;
 
@@ -66,8 +134,8 @@ class QuickAirlineNameCompleteTest extends WebTestCase {
   }
 }
 
-// Quick airline search by alias
-class QuickAirlineAliasCompleteTest extends WebTestCase {
+// Single airline search by alias
+class SingleAirlineAliasCompleteTest extends WebTestCase {
   function test() {
     global $webroot, $airline;
 
@@ -79,8 +147,8 @@ class QuickAirlineAliasCompleteTest extends WebTestCase {
   }
 }
 
-// Quick airline search by IATA code
-class QuickAirlineIATACompleteTest extends WebTestCase {
+// Single airline search by IATA code
+class SingleAirlineIATACompleteTest extends WebTestCase {
   function test() {
     global $webroot, $airline;
 
@@ -92,8 +160,8 @@ class QuickAirlineIATACompleteTest extends WebTestCase {
   }
 }
 
-// Quick airline search by ICAO code
-class QuickAirlineICAOCompleteTest extends WebTestCase {
+// Single airline search by ICAO code
+class SingleAirlineICAOCompleteTest extends WebTestCase {
   function test() {
     global $webroot, $airline;
 
